--- a/index.html
+++ b/index.html
@@ -2,71 +2,126 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/icon-font.css">
-    <link rel="stylesheet" href="sass/app.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
+  <link rel="stylesheet" href="css/icon-style.css">
+  <link rel="stylesheet" href="sass/app.css" />
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
-    <title>Natours | Exciting tours for adventurous people</title>
+  <title>Natours | Exciting tours for adventurous people</title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="header__logo-box">
-            <img src="./img/logo-white.png" alt="Company-logo" class="header__logo">
+  <header class="header">
+    <div class="header__logo-box">
+      <img src="./img/logo-white.png" alt="Company-logo" class="header__logo" />
+    </div>
+    <div class="header__text-box">
+      <h1 class="heading-primary">
+        <span class="heading-primary--main">
+          Outdoors
+        </span>
+        <span class="heading-primary--second">
+          is where life happens
+        </span>
+      </h1>
+      <a href="#" class="btn btn--white btn--animated">
+        Discover our tour
+      </a>
+    </div>
+  </header>
+  <main>
+    <section class="section-about">
+      <div class="u-center-text u-margin-bottom-large">
+        <h2 class="heading-secondary">
+          Exciting tour for adventures people
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            You are going to fall love with this
+          </h3>
+          <p class="paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+            illum expedita ducimus consectetur exercitationem est molestiae
+            labore molestias, suscipit Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Sed, repellendus.
+          </p>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Live adventures like you do
+          </h3>
+          <p class="paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+            illum expedita ducimus consectetur exercitationem est molestiae
+            labore molestias, suscipit Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Sed, repellendus.
+          </p>
+          <a href="#" class="btn-text"> Learn more &rarr;</a>
         </div>
-        <div class="header__text-box">
-            <h1 class="heading-primary">
-                <span class="heading-primary--main">
-                    Outdoors
-                </span>
-                <span class="heading-primary--second">
-                    is where life happens
-                </span>
-            </h1>
-            <a href="#" class="btn btn--white btn--animated">
-                Discover our tour
-            </a>
+        <div class="col-1-of-2">
+          <div class="composition">
+            <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1" />
+            <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2" />
+            <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3" />
+          </div>
         </div>
-    </header>
-    <main>
-        <section class="section-about">
-            <div class="u-center-text u-margin-bottom-large">
-                <h2 class="heading-secondary">
-                    Exciting tour for adventures people
-                </h2>
-            </div>
-            <div class="row">
-                <div class="col-1-of-2">
-                    <h3 class="heading-tertiary u-margin-bottom-small"> You are going to fall love with this</h3>
-                    <p class="paragraph">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas illum expedita ducimus consectetur
-                        exercitationem est molestiae labore molestias, suscipit Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Sed, repellendus.
-                    </p>
-                    <h3 class="heading-tertiary u-margin-bottom-small"> Live adventures like you do </h3>
-                    <p class="paragraph">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas illum expedita ducimus consectetur
-                        exercitationem est molestiae labore molestias, suscipit Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Sed, repellendus.
-                    </p>
-                    <a href="#" class="btn-text"> Learn more &rarr;</a>
-                </div>
-                <div class="col-1-of-2">
-                    <div class="composition">
-                        <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1">
-                        <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
-                        <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
-                    </div>
-
-                </div>
-            </div>
-        </section>
-    </main>
-
-
+      </div>
+    </section>
+    <section class="section-features">
+      <div class="row">
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="icon-basic-world feature-box__icon"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Explore the world
+            </h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, saepe Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Corrupti, nemo
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="icon-basic-compass feature-box__icon"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Meet Nature
+            </h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, saepe Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Doloribus, magni!
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="icon-basic-map feature-box__icon"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Find Your Way
+            </h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, saepe Lorem ipsum, dolor sit amet
+              consectetur adipisicing elit. Ratione, repudiandae.
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="icon-basic-heart feature-box__icon"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live a Healthier life
+            </h3>
+            <p class="feature-box__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, saepe Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Corrupti, nemo
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
