--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
-  <link rel="stylesheet" href="css/icon-style.css">
+  <link rel="stylesheet" href="css/icon-style.css" />
   <link rel="stylesheet" href="sass/app.css" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
@@ -69,6 +69,7 @@
         </div>
       </div>
     </section>
+    <!-- Section features-->
     <section class="section-features">
       <div class="row">
         <div class="col-1-of-4">
@@ -78,8 +79,9 @@
               Explore the world
             </h3>
             <p class="feature-box__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, saepe Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Corrupti, nemo
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Nostrum, saepe Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Corrupti, nemo
             </p>
           </div>
         </div>
@@ -90,8 +92,9 @@
               Meet Nature
             </h3>
             <p class="feature-box__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, saepe Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Doloribus, magni!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Nostrum, saepe Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Doloribus, magni!
             </p>
           </div>
         </div>
@@ -102,8 +105,9 @@
               Find Your Way
             </h3>
             <p class="feature-box__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, saepe Lorem ipsum, dolor sit amet
-              consectetur adipisicing elit. Ratione, repudiandae.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Nostrum, saepe Lorem ipsum, dolor sit amet consectetur
+              adipisicing elit. Ratione, repudiandae.
             </p>
           </div>
         </div>
@@ -114,12 +118,124 @@
               Live a Healthier life
             </h3>
             <p class="feature-box__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, saepe Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Corrupti, nemo
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Nostrum, saepe Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Corrupti, nemo
             </p>
           </div>
         </div>
       </div>
+    </section>
+    <!-- Section tours-->
+    <section class="section-tours">
+      <div class="u-center-text u-margin-bottom-large">
+        <h2 class="heading-secondary">
+          Most popular tours
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__slide card__slide--front">
+              <div class="card__picture card__picture--1">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--1">
+                  The sea explorer
+                </span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>3 day tours</li>
+                  <li>Up to 3 people</li>
+                  <li>2 tour guides</li>
+                  <li>Cozy hotel sleeps</li>
+                  <li>Difficulty: easy</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__slide card__slide--back card__slide--back-1">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <div class="card__price-box-only">Only</div>
+                  <div class="card__price-box-value">$297</div>
+                </div>
+                <a href="#" class="btn btn--white"> Book now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__slide card__slide--front">
+              <div class="card__picture card__picture--2">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--2">
+                  The forest hiker
+                </span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>7 day tours</li>
+                  <li>Up to 7 people</li>
+                  <li>3 tour guides</li>
+                  <li>Cozy hotel sleeps</li>
+                  <li>Difficulty : Medium</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__slide card__slide--back card__slide--back-2">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <div class="card__price-box-only">Only</div>
+                  <div class="card__price-box-value">$497</div>
+                </div>
+                <a href="#" class="btn btn--white"> Book now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__slide card__slide--front">
+              <div class="card__picture card__picture--3">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--3">
+                  The snow adventures
+                </span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>10 day tours</li>
+                  <li>Up to 10 people</li>
+                  <li>8 tour guides</li>
+                  <li>Cozy hotel sleeps</li>
+                  <li>Difficulty : Hard</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__slide card__slide--back card__slide--back-3">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <div class="card__price-box-only">Only</div>
+                  <div class="card__price-box-value">$697</div>
+                </div>
+                <a href="#" class="btn btn--white"> Book now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="u-center-text u-margin-top-huge">
+        <a href="#" class="btn btn--green"> Discover all tours !</a>
+      </div>
+
     </section>
   </main>
 </body>
